Fix category overflow.

--- a/Gizmo.Client.UI/src/scss/themes/client/components/_app-card.scss
+++ b/Gizmo.Client.UI/src/scss/themes/client/components/_app-card.scss
@@ -73,12 +73,18 @@
         &__footer {
             display: flex;
             padding: 0.0rem 1.6rem 1.6rem 1.6rem;
+            width: 100%;
+            overflow: hidden;
 
             &-category {
                 background-color: rgba(255, 255, 255, 0.1);
                 border-radius: 16px;
                 color: rgba(255, 255, 255, 0.6);
                 padding: 0.6rem 1.2rem;
+                white-space: nowrap;
+                max-width: 100%;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 @include font-s-theme-client($font-weight-regular-theme-client);
             }
         }
